force-app/main/default/objects/BMCServiceDesk__Service_Target__c/BMCServiceDesk__Service_Target__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for service targets.</description>
    <label>Service Target</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Target #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>