force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__Advanced_Rule__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Advanced_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Rule</label>
    <type>Checkbox</type>
</CustomField>