force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__BusinessDays__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BusinessDays__c</fullName>
    <inlineHelpText>Set the target time of completing the service in business days.</inlineHelpText>
    <label>Business Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>