force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__FKSLA__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSLA__c</fullName>
    <label>SLA</label>
    <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
    <relationshipLabel>Service Targets</relationshipLabel>
    <relationshipName>Service_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>