force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__FKSupport_Hours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSupport_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the business support hours for the service.</inlineHelpText>
    <label>Support Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>