force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__Pause_Clock_Advanced_Expression__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Pause_Clock_Advanced_Expression__c</fullName>
    <label>Pause Clock Advanced Expression</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>