force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__Qualification_ClockStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Qualification_ClockStatus__c</fullName>
    <description>This field will store the clock status that the target should have when the Qualification fails and has a Queue changed in the record.</description>
    <inlineHelpText>This field will store the clock status that the target should have when the Qualification fails and has a Queue changed in the record.</inlineHelpText>
    <label>Target Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAUSE</fullName>
                <label>Pause the clock</label>
            </value>
            <value>
                <fullName>KEEP_RUNNING</fullName>
                <label>Keep the clock running</label>
            </value>
            <value>
                <fullName>CANCEL</fullName>
                <default>true</default>
                <label>Cancel the target</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>