force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__Service_Target_Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Target_Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>