force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Target__c</fullName>
    <inlineHelpText>Set the target time of completing the service in days, hours, and minutes.</inlineHelpText>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>