force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__Target_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Target_Type__c</fullName>
    <inlineHelpText>Select the type of service target.</inlineHelpText>
    <label>Target Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>