force-app/main/default/objects/BMCServiceDesk__Service_Target__c/fields/BMCServiceDesk__Use_Account_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Use_Account_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Override the service target support hours with the client&apos;s account support hours</inlineHelpText>
    <label>Use Account Business Hours</label>
    <type>Checkbox</type>
</CustomField>